[project]
name = "python-image-board"
version = "0.1.0"
description = "A simple image board web application built with Python Flask."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.0.0",
    "flask-caching>=2.0.0",
    "flask-compress>=1.14",
]

[tool.uv]
no-build = true
